# temp_test_pypi_action

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: temp-test-pypi-action-pypi.yml
src/temp-test-pypi-action/manager/: manager.py
